2006-10-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.13.

2006-10-02  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Export HTTP_FORBIDDEN as well.

2006-07-05  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.12.

2006-07-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterOptionDefault): Send
	strings as strings, not character sequences.

2006-05-25  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.11.

2006-05-25  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Selected HTTP status codes.

2006-05-16  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_writeFd): Follow upstream behaviour for
	PaperDimension and ImageableArea (see STR #1689).

2006-05-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.10.

2006-05-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Put debug messages
	in.

	* cupsmodule.c (debugprintf): Implemented.

	* cupsmodule.h: Declare debugprintf().

2006-05-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getClasses): Handle IPP_NOT_FOUND,
	which is returned when there are no classes.
	(Connection_getPrinterAttributes): 'finishings-supported' is a
	list.
	(Connection_addPrinterOptionDefault): Prevent buffer overrun.

2006-05-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.9.

2006-05-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Make
	'requesting-user-name-*' attributes lists.
	(Connection_getPrinters): Handle IPP_NOT_FOUND, which is returned
	when there are no queues.

2006-05-03  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): IPP finishings.

	* cupsconnection.c (Connection_getPrinterAttributes): Multi-valued
	network default options should appear as lists.

2006-04-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterOptionDefault): Support
	lists as values.

2006-04-19  Tim Waugh  <twaugh@redhat.com>
